# web_development_basics

./: index.html  main.py  pyproject.toml
